; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_parse_declaration.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_parse_declaration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree = type { i32 }

@type_declaration = common dso_local global i32 0, align 4
@parse_combinator_decl = common dso_local global i32 0, align 4
@parse_partial_app_decl = common dso_local global i32 0, align 4
@parse_final_decl = common dso_local global i32 0, align 4
@parse_builtin_combinator_decl = common dso_local global i32 0, align 4
@PARSE_FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tree* @parse_declaration() #0 {
  %1 = alloca %struct.tree*, align 8
  %2 = load i32, i32* @type_declaration, align 4
  %3 = call i32 @PARSE_INIT(i32 %2)
  %4 = load i32, i32* @parse_combinator_decl, align 4
  %5 = call i32 @PARSE_TRY_OPT(i32 %4)
  %6 = load i32, i32* @parse_partial_app_decl, align 4
  %7 = call i32 @PARSE_TRY_OPT(i32 %6)
  %8 = load i32, i32* @parse_final_decl, align 4
  %9 = call i32 @PARSE_TRY_OPT(i32 %8)
  %10 = load i32, i32* @parse_builtin_combinator_decl, align 4
  %11 = call i32 @PARSE_TRY_OPT(i32 %10)
  %12 = load i32, i32* @PARSE_FAIL, align 4
  %13 = load %struct.tree*, %struct.tree** %1, align 8
  ret %struct.tree* %13
}

declare dso_local i32 @PARSE_INIT(i32) #1

declare dso_local i32 @PARSE_TRY_OPT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
